# flask-recipe-app

./: README.md  __init__.py  pyproject.toml  railway.json  setup.txt
app/: __init__.py
app/modules/: posts.py
app/postPages/: __init__.py  views.py
app/publicPages/: __init__.py  views.py
app/routes/: __init__.py  api_views.py  post_views.py  public_views.py
app/static/: main.css  main.min.css  pizza1-5x.avif  styles.css
app/static/scripts/: dropdown.js  events.js  form.js  hamburger.js  main.js  posts.js
app/static/styles/: aboutbg.css  loginbg.css  post.css  posts.css  wrapperbg.css
app/static/styles/minify/: aboutbg.min.css  loginbg.min.css  post.min.css  posts.min.css  wrapperbg.min.css
app/templates/: about.html  footer.html  form.html  header.html  hero.html  index.html  layout.html  main.html  mobileNav.html  navigation.html  post.html  posts.html  posts_cards.html  user.html
app/templates/components/: cards.html  dropdown.html  loginButton.html  search.html
data/: db.json
modules/: usersList.py
router/: routes.py
static/: styles.css
static/scripts/: main.js  posts.js
templates/: error.html  footer.html  form.html  header.html  loginButton.html  main.html  post.html
