[tool.poetry]
name = "starterFlask"
version = "0.1.0"
description = "simple app"
authors = ["majamarijan <majapianist@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]


[tool.poetry.scripts]
start = "app:main"

[tool.poetry.urls]
"Homepage" = "https://github.com/majamarijan/starterFlask"
"Bug Tracker" = "https://github.com/majamarijan/starterFlask/issues"


[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
requests = "^2.31.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
